Ingress/doctobobo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doctobobo-ingress
  namespace: doctobobo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: doctobobo.my-soc.fr
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  tls:
    - hosts:
        - doctobobo.my-soc.fr
      secretName: ingress-tls
