Ingress/iris-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: iris.my-soc.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iriswebapp-app
                port:
                  number: 8000
  tls:
    - hosts:
        - iris.my-soc.fr
      secretName: ingress-tls2
