Ingress/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: prometheus-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.my-soc.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 8080
